Adicionados icons do Font Awesome

--- a/Teste mktNOW/html/index.html
+++ b/Teste mktNOW/html/index.html
@@ -34,10 +34,10 @@
 					</li>
 				</ul>
 				<div class=" mr-5 pt-2">
-					<a href="#" class="text-light">TELEVENDAS<p class="text-success">11 40287897</p></a>
+					<a href="#" class="text-light">TELEVENDAS<p class="text-success"><i class="fa fa-assistive-listening-systems"></i> (11) 4028-7897</p></a>
 				</div>
 				<div class=" mr-5 pt-2">
-					<a href="#" class="text-light">PEDIDOS POR WHATSAPP<p class="text-success">11 940287897</p></a>
+					<a href="#" class="text-light">PEDIDOS POR WHATSAPP<p class="text-success"><i class="fa fa-whatsapp"></i> +55 (11) 94028-7897</p></a>
 				</div>
 				<div class=" p-2">
 					<svg class="bi bi-person text-light" width="3em" height="3em" viewBox="0 0 16 16"
@@ -100,7 +100,7 @@
 			</table>
 		</div>
 	</section>
-	<footer class="footer">
+	<footer class="footer bg-dark mt-3">
 		oi
 	</footer>
 	<!-- Optional JavaScript -->
