--- a/Teste mktNOW/html/index.html
+++ b/Teste mktNOW/html/index.html
@@ -10,8 +10,7 @@
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
+	<link rel="shortcut icon" href="../assets/favicon.png" />
 	<title>Teste MKTNow</title>
 </head>
 
@@ -34,10 +33,12 @@
 					</li>
 				</ul>
 				<div class=" mr-5 pt-2">
-					<a href="#" class="text-light">TELEVENDAS<p class="text-success"><i class="fa fa-assistive-listening-systems"></i> (11) 4028-7897</p></a>
+					<a href="#" class="text-light">TELEVENDAS<p class="text-success"><i
+								class="fa fa-assistive-listening-systems"></i> (11) 4028-7897</p></a>
 				</div>
 				<div class=" mr-5 pt-2">
-					<a href="#" class="text-light">PEDIDOS POR WHATSAPP<p class="text-success"><i class="fa fa-whatsapp"></i> +55 (11) 94028-7897</p></a>
+					<a href="#" class="text-light">PEDIDOS POR WHATSAPP<p class="text-success"><i
+								class="fa fa-whatsapp"></i> +55 (11) 94028-7897</p></a>
 				</div>
 				<div class=" p-2">
 					<svg class="bi bi-person text-light" width="3em" height="3em" viewBox="0 0 16 16"
@@ -46,7 +47,7 @@
 							d="M13 14s1 0 1-1-1-4-6-4-6 3-6 4 1 1 1 1h10zm-9.995-.944v-.002.002zM3.022 13h9.956a.274.274 0 00.014-.002l.008-.002c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664a1.05 1.05 0 00.022.004zm9.974.056v-.002.002zM8 7a2 2 0 100-4 2 2 0 000 4zm3-2a3 3 0 11-6 0 3 3 0 016 0z"
 							clip-rule="evenodd" />
 					</svg>
-					<div class="text-uppercase text-light" style="position: absolute; left: 90px; top: 320px;">user
+					<div class="text-uppercase text-light" style="position: absolute; left: 90px; top: 330px;">user
 					</div>
 				</div>
 			</div>
@@ -84,19 +85,38 @@
 			<table class="second-section-table">
 				<thead>
 					<tr>
-						<th>
-							<svg class="bi bi-x-square-fill text-success" width="1em" height="1em" viewBox="0 0 16 16"
-								fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-								<path fill-rule="evenodd"
-									d="M2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2zm9.854 4.854a.5.5 0 00-.708-.708L8 7.293 4.854 4.146a.5.5 0 10-.708.708L7.293 8l-3.147 3.146a.5.5 0 00.708.708L8 8.707l3.146 3.147a.5.5 0 00.708-.708L8.707 8l3.147-3.146z"
-									clip-rule="evenodd" />
-							</svg>vinhos
+						<th id="first-content">
+							<a href="#">
+								<i class="fa fa-minus-square" class="icons"></i>vinhos
+							</a>
 						</th>
 						<th>
-							<i class="fa fa-plus-square" style="font-size: 20px; color: red;"></i>acessórios
+							<a href="#">
+								<i class="fa fa-plus-square" class="icons"></i>acessórios
+							</a>
 						</th>
 					</tr>
 				</thead>
+				<tbody>
+					<tr>
+						<td>
+							tipo
+							<p>best sellers</p>
+						</td>
+						<td>
+							especiais
+							<p>ultra premium</p>
+						</td>
+						<td>
+							preço
+							<p>até R$50</p>
+						</td>
+						<td>
+							país
+							<p>frança</p>
+						</td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 	</section>
