Melhorado a estilização da table

--- a/Teste mktNOW/html/index.html
+++ b/Teste mktNOW/html/index.html
@@ -85,12 +85,12 @@
 			<table class="second-section-table">
 				<thead>
 					<tr>
-						<th id="first-content">
+						<th id="first-content" colspan="3">
 							<a href="#">
 								<i class="fa fa-minus-square" class="icons"></i>vinhos
 							</a>
 						</th>
-						<th>
+						<th colspan="1">
 							<a href="#">
 								<i class="fa fa-plus-square" class="icons"></i>acessórios
 							</a>
@@ -121,7 +121,7 @@
 		</div>
 	</section>
 	<footer class="footer bg-dark mt-3">
-		oi
+
 	</footer>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
