--- a/Teste mktNOW/html/index.html
+++ b/Teste mktNOW/html/index.html
@@ -57,8 +57,8 @@
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 			</ol>
+			<button type="button" class="btn" onclick="">CHAMAR API SWAPI</button>
 			<div class="carousel-inner">
-				<button type="button" class="btn" onclick="">CHAMAR API SWAPI</button>
 				<div class="carousel-item active">
 					<img src="../assets/banner_1.png" class="d-block w-100" alt="banner_1">
 				</div>
@@ -121,7 +121,38 @@
 		</div>
 	</section>
 	<footer class="footer bg-dark mt-3">
-
+		<div class="footer-menu">
+			<div class="text-white" id="first-footer-content">
+				<img alt="Logo Site" title="Logo footer" src="../assets/logo.png" />
+				<p class="footer-content">O foco da Sonoma está na procura, avaliações e oferta de rótulos excelentes. Contamos com a
+					parceria
+					de dezenas de importadores e produtores nacionais e internacionais. Também somos especializados
+					na
+					importação direta da Europa e do Novo Mundo. Divulgamos nossas ofertas por email, mídias sociais
+					e
+					pelo nosso site.</p>
+			</div>
+			<div class="text-white" class="footer-title" id="second-footer-content">Canais de Atendimento
+				<br />
+				<p class="footer-content"><a>suporte@sonoma.com.br</a></p>
+				<a class="text-success" href="#"><i class="fa fa-whatsapp"></i> 11 9 8360 5167</a><br />
+				<a class="text-success" href="#"><i class="fa fa-phone"></i>11 4280-9371</a><br /><br />
+				<a class="text-success" href="#"><i class="fa fa-facebook-square"></i></a>
+				<a class="text-success" href="#"><i class="fa fa-instagram"></i></a>
+			</div>
+			<div class="text-white" class="footer-title" id="third-footer-content">Sobre Nós
+				<p class="footer-content"><a>Quem somos</a></p>
+			</div>
+			<div class="text-white" class="footer-title" id="fourth-footer-content">Conteúdos
+				<p class="footer-content">Receitas</p>
+			</div>
+			<div class="text-white" class="footer-title" id="fifth-footer-content">Formas de Pagamento
+				<img alt="Formas de Pagamente" title="Pagamento" src="../assets/formas-de-pagamento.png" />
+			</div>
+			<div class="text-white" class="footer-title" id="sixth-footer-content">Compra Segura - Site Protegido
+				<img alt="Compra segura" title="Pagamento Seguro" src="../assets/selos-segurancas.png" />
+			</div>
+		</div>
 	</footer>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
