--- a/Teste mktNOW/html/index.html
+++ b/Teste mktNOW/html/index.html
@@ -124,7 +124,10 @@
 		<div class="footer-menu">
 			<div class="text-white" id="first-footer-content">
 				<img alt="Logo Site" title="Logo footer" src="../assets/logo.png" />
-				<p class="footer-content">O foco da Sonoma está na procura, avaliações e oferta de rótulos excelentes. Contamos com a
+				<br>
+				<br>
+				<p class="footer-content">O foco da Sonoma está na procura, avaliações e oferta de rótulos excelentes.
+					Contamos com a
 					parceria
 					de dezenas de importadores e produtores nacionais e internacionais. Também somos especializados
 					na
@@ -132,25 +135,34 @@
 					e
 					pelo nosso site.</p>
 			</div>
-			<div class="text-white" class="footer-title" id="second-footer-content">Canais de Atendimento
+			<div class="footer-title text-white" id="second-footer-content">Canais de Atendimento
+				<br />
 				<br />
 				<p class="footer-content"><a>suporte@sonoma.com.br</a></p>
 				<a class="text-success" href="#"><i class="fa fa-whatsapp"></i> 11 9 8360 5167</a><br />
-				<a class="text-success" href="#"><i class="fa fa-phone"></i>11 4280-9371</a><br /><br />
+				<a class="text-success" href="#"><i class="fa fa-phone"></i> 11 4280-9371</a><br /><br />
 				<a class="text-success" href="#"><i class="fa fa-facebook-square"></i></a>
 				<a class="text-success" href="#"><i class="fa fa-instagram"></i></a>
 			</div>
-			<div class="text-white" class="footer-title" id="third-footer-content">Sobre Nós
+			<div class="footer-title text-white" id="third-footer-content">Sobre Nós
 				<p class="footer-content"><a>Quem somos</a></p>
 			</div>
-			<div class="text-white" class="footer-title" id="fourth-footer-content">Conteúdos
+			<div class="footer-title text-white" id="fourth-footer-content">Conteúdos
 				<p class="footer-content">Receitas</p>
 			</div>
-			<div class="text-white" class="footer-title" id="fifth-footer-content">Formas de Pagamento
+			<div class="footer-title text-white" id="fifth-footer-content">Formas de Pagamento
+				<br />
+				<br />
 				<img alt="Formas de Pagamente" title="Pagamento" src="../assets/formas-de-pagamento.png" />
 			</div>
-			<div class="text-white" class="footer-title" id="sixth-footer-content">Compra Segura - Site Protegido
+			<br />
+			<div class="footer-title text-white" id="sixth-footer-content">Compra Segura - Site Protegido
+				<br />
+				<br />
 				<img alt="Compra segura" title="Pagamento Seguro" src="../assets/selos-segurancas.png" />
+			</div>
+			<div id="seventh-footer-content">
+				<button type="button" class="btn-success" id="second-btn"><i class="fa fa-comment"></i> <span>Conversar conosco</span></button>
 			</div>
 		</div>
 	</footer>
