--- a/Teste mktNOW/html/index.html
+++ b/Teste mktNOW/html/index.html
@@ -57,7 +57,7 @@
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 			</ol>
-			<button type="button" class="btn" onclick="">CHAMAR API SWAPI</button>
+			<button type="button" class="btn">CHAMAR API SWAPI</button>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="../assets/banner_1.png" class="d-block w-100" alt="banner_1">
