--- a/Teste mktNOW/html/index.html
+++ b/Teste mktNOW/html/index.html
@@ -57,7 +57,7 @@
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 			</ol>
-			<button type="button" class="btn">CHAMAR API SWAPI</button>
+			<button type="button" class="btn" onclick="apiRequest()">CHAMAR API SWAPI</button>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="../assets/banner_1.png" class="d-block w-100" alt="banner_1">
@@ -178,6 +178,7 @@
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 		crossorigin="anonymous"></script>
 	<script type="text/javascript" src="../js/main.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 </body>
 
