--- a/Teste mktNOW/html/index.html
+++ b/Teste mktNOW/html/index.html
@@ -57,10 +57,12 @@
 				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 			</ol>
-			<button type="button" class="btn" onclick="apiRequest()">CHAMAR API</button>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="../assets/banner_1.png" class="d-block w-100" alt="banner_1">
+					<div class="carousel-caption d-none d-md-block">
+						<button type="button" class="btn" onclick="apiRequest()">CHAMAR API</button>
+					</div>
 				</div>
 				<div class="carousel-item">
 					<img src="../assets/banner_2.jpg" class="d-block w-100" alt="banner_2">
